--- a/css/partials/_menu.scss
+++ b/css/partials/_menu.scss
@@ -69,6 +69,14 @@ header{
   }
 }
 
+.labelMenu{
+  display: none;
+
+  @include responsive(){
+    display: block;
+  }
+}
+
 .bx{
   display: none;
   
